# special_seminar_

./: 1.pcd  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
include/: mls_mpi.h
src/: main.cpp  mls_mpi.cpp
